objects/ssot__AssetSalesAction__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActionDateTime__c</fullName>
        <label>Action Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AssetActionCategory__c</fullName>
        <label>Asset Action Category</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetActionType__c</fullName>
        <label>Asset Action Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetChangeQuantity__c</fullName>
        <label>Asset Change Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AssetId__c</fullName>
        <label>Asset</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetPriceChangeAmount__c</fullName>
        <label>Asset Price Change Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Asset Sales Action Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MonthlyRecurringRevenueChangeAmount__c</fullName>
        <label>Monthly Recurring Revenue Change Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1711688034018_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssetSalesAction_AssetId_map_Asset_I_rel</label>
        <referenceTo>ssot__Asset__dlm</referenceTo>
        <relationshipLabel>AssetSalesAction_AssetId_map_Asset_I_rel</relationshipLabel>
        <relationshipName>rel_1711688034018_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>